successfully runnung truffle serve!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,7 @@
   </div>
 </nav>
 
-
-
-<header class="l-header v-center-parent">
+<!--<header class="l-header v-center-parent">
    
 
          <ul class="top-menu disable-text-selection" >
@@ -33,7 +31,7 @@
                  <a routerLink="history" href="/">History</a>
              </li>
         </ul>
-</header>
+</header>-->
 
 <router-outlet></router-outlet>
 
