--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,12 @@
         <a class="nav-link" routerLink="home" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="sendether" href="/">SendEther</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="history" href="/">History</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 
