--- a/src/app/deposit-form/deposit-form.component.html
+++ b/src/app/deposit-form/deposit-form.component.html
@@ -1,4 +1,4 @@
-<h1>Deposit {{ss.name}}</h1>
+<h1>Deposit {{ss.name}} {{ss.accounts}}</h1>
 <form novalidate
       [formGroup]="myform"
       (ngSubmit)="onSubmit()">
