--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,25 @@
-<p>
-  home works!
-</p>
 
-<deposit-form></deposit-form>
+<div class="row">
+    <div class="col-lg-6">
+        <h1>Balance</h1>
+        {{ss.balanceInEther}} eth
 
-<withdraw-form></withdraw-form>
+        <!--<h1>Allowed Accounts</h1>
+        <div ng-repeat="account in accounts">
+            {{ss.account.address}}: {{ss.account.isAllowed}}
+        </div>
+
+    </div>
+    <div class="col-lg-6">
+        <h1>Add the contract to your wallet</h1>
+        <h3>Address</h3>
+        {{ss.contract_address}}
+        <h3>ABI</h3>
+        {{ss.contract_abi}}
+    </div>-->
+</div>
+
+
+<!--<deposit-form></deposit-form>
+
+<withdraw-form></withdraw-form>-->
