--- a/src/app/sendether/sendether.component.html
+++ b/src/app/sendether/sendether.component.html
@@ -1,6 +1,8 @@
-<p>
-  sendether works!
-</p>
+<h1>All Addresses</h1>
+
+<ul *ngFor = "let addrress of addresses">
+  <li>{{addrress}}</li>
+</ul>
 
 <deposit-form></deposit-form>
 
