--- a/src/app/withdraw-form/withdraw-form.component.html
+++ b/src/app/withdraw-form/withdraw-form.component.html
@@ -58,7 +58,7 @@
           class="btn btn-primary">Submit
   </button>
 
-  <pre>{{myform.value | json}}</pre>
+  <!--<pre>{{myform.value | json}}</pre>-->
 </form>
 </div>
 
