--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="history" href="/">History</a>
       </li>
+            <li class="nav-item">
+        <a class="nav-link" routerLink="permission" href="/">Permission</a>
+      </li>
     </ul>
   </div>
 </nav>
