--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
-    <div class="col-lg-6">
-        <h1>Balance</h1>
+    <div class="col-lg-6" align="center" >
+        <h1 align="center">Balance in Main Account  </h1>
         {{ss.balanceInEther | number : '1.2-2'}} eth
 
         <!--<h1>Allowed Accounts</h1>
